# fed-nc

./: .gitignore  README.md
bigbro-server/: CMakeLists.txt  Makefile  client.cc  client.h  common.h  logger.cc  logger.h  main.cc  main.h  server.cc  server.h
client/: alpha_beta.py  client.py  config.py  fed1.py  fed2.py  flip.py  human.py  noughtsandcrosses.py  ttt.py  ttt_eval.py
commons/: __init__.py  alpha_beta.py  ttt.py
